--- a/_posts/2012-07-09-news-hn-2012-GA.md
+++ b/_posts/2012-07-09-news-hn-2012-GA.md
@@ -1,7 +1,7 @@
 
 ---
 layout: article
-title: European science champions score an early goal for cloud computing
+title: European science champions score an early goal for cloud
 image: /img/design/stratuslab_category.png
 category: news
 ---
