Escape 3 square brakets (they make Jekyll complain)

--- a/_posts/news/2012-07-09-news-hn-2012-GA.md
+++ b/_posts/news/2012-07-09-news-hn-2012-GA.md
@@ -8,7 +8,7 @@ category: news
 
 **Helix Nebula – the science cloud**, set up earlier this year to support the massive IT requirements of European scientists and create a cloud computing market for the public sector in Europe, has today announced the initial deployment of its first flagship applications in high energy physics, molecular biology and natural disaster recovery. 
 
-A collaboration between big science and big business, Helix Nebula joins the forces of leading IT providers and three of Europe’s leading research centres (CERN [1], EMBL [2], and ESA [3]), and has now received €1.8 million funding from the European Commission. The initiative strongly supports the Commission’s Digital Agenda for Europe: It stresses a unified approach to data protection regulations and lightweight, efficient governance; it also has ambitions to support European economic development by making its services available to the wider community.
+A collaboration between big science and big business, Helix Nebula joins the forces of leading IT providers and three of Europe’s leading research centres (CERN \[1\], EMBL \[2\], and ESA \[3\]), and has now received €1.8 million funding from the European Commission. The initiative strongly supports the Commission’s Digital Agenda for Europe: It stresses a unified approach to data protection regulations and lightweight, efficient governance; it also has ambitions to support European economic development by making its services available to the wider community.
 
 First results of the initiative’s on-going Proof of Concept (PoC) phase now show that CERN, EMBL and ESA succeeded in deploying challenging scientific applications each involving tens of thousands of jobs running at data centres operated by Atos, CloudSigma and T-Systems. 
 
