MWC news Tuesday

--- a/_posts/news/2014-02-24-news-mwc1.md
+++ b/_posts/news/2014-02-24-news-mwc1.md
@@ -5,11 +5,12 @@ image: /img/design/seethroughcloud_category.png
 category: news
 ---
 
-**NuvlaBox unveiled today at World Mobile Congress**
-
+**NuvlaBox unveiled this week at Mobile World Congress**
 
 <p align="center"><img src="/img/content/nuvlabox/nuvlabox-photo.png" alt="CloudScape" width="900" /></p>
 
-Three members of the SixSq team, Marc-Elian Bégin, Robert Branchat and Samuel Mellot, started their day early today to be ready for the first demos of the [NuvlaBox](http://sixsq.com/products/nuvlabox.html). There will be no time for them to visit the sights of Barcelona if only a fraction of the expected 72,000 visitors stop by the [Swiss Pavilion](http://static.morethanchocolate.ch/). 
+Three members of the SixSq team, Marc-Elian Bégin, Robert Branchat and Samuel Mellot, started their day early today to breakfast at the Swiss Embassy in Barcelona.  Then it's back to the [Mobile World Congress](http://www.mobileworldcongress.com/) to  continue with demos of the [NuvlaBox](http://sixsq.com/products/nuvlabox.html). There will be no time for them to visit the sights of Barcelona if only a fraction of the expected 72,000 visitors stop by the [Swiss Pavilion](http://static.morethanchocolate.ch/). 
 
+The event is going well so far and the team are looking forward to showcasing their new gizmo to potential customers.  
 
+For more details on this news please [contact SixSq](mailto:info@sixsq.com).
