--- a/_posts/jobs/2014-05-09-job-gaia-2014.md
+++ b/_posts/jobs/2014-05-09-job-gaia-2014.md
@@ -1,8 +1,9 @@
 ---
-layout: article
+layout: article_job
 title: Software Engineer 
 category: jobs
-image: /img/design/training_coaching_category.png
+class: jobs
+image: /img/design/slipstream_category.png
 ---
 
 There is an opening with SixSq to join the **Gaia** team working at the Geneva Observatory in Versoix on the preparation for the Gaia data processing. [Gaia](http://sci.esa.int/gaia/) is an ESA cornerstone mission launched in 2013 that will undertake an astrometric, photometric and spectroscopic survey of the Galaxy. The Gaia Data Processing and Analysis Consortium (DPAC) will process the raw data to be published in the largest stellar catalogue ever made. At the Geneva Observatory a group of 9 scientists and software engineers lead the European-wide collaboration responsible for the [variability processing and analysis](http://www.isdc.unige.ch/Gaia) of the Gaia data. 
