--- a/_posts/jobs/2015-02-16-job-pacha-2015.md
+++ b/_posts/jobs/2015-02-16-job-pacha-2015.md
@@ -1,14 +1,15 @@
 ---
-layout: article
+layout: article_job
 title: Software Developer
 category: jobs
+class: jobs
 image: /img/design/slipstream_category.png
 ---
 
-There is an opening in the SixSq team for a Software Developer to support [HEPIA](http://hepia.hesge.ch/), the University of Applied Sciences, on the PAChA project. PAChA is a two-year project with the following goals:
+There is an opening in the SixSq team for a Software Developer to support [HEPIA](http://hepia.hesge.ch/), the University of Applied Sciences, on the PAChA project. PAChA is a one-year project with the following goals:
 
 - to develop a new type of private, portable cloud appliance.
--  to develop tools to estimate the potential savings when deploying applications on private, public or hybrid cloud environments.
+- to develop tools to estimate the potential savings when deploying applications on private, public or hybrid cloud environments.
 
 The successful candidate will be employed by  HEPIA but will work with the SixSq team located in the Meyrin offices. 
 
@@ -24,12 +25,13 @@ Skills and Experience
 We are looking for candidates with the following skills and experience:  
 
 
-**Technical**
+**Technical**  
 
 - Knowledge of cloud technologies and distributed systems
 - Linux Operating System
 - Good knowledge of Linux networking
-- Good knowledge of Java, Python and Clojure
+- Good knowledge of Java and Python
+- Knowledge of Clojure would be an advantage
 - Expertise in CloudStack with knowledge of installation, administration and internals.
 
 
@@ -40,16 +42,18 @@ We are looking for candidates with the following skills and experience:
 - Enjoy working in an international and dynamic team 
 
 
-**Educational**: 
+**Educational**
 
 - Masters degree or equivalent in a relevant discipline
 
-**Language skills**: 
+
+**Language skills**  
 
 - Good spoken and written French and English
 
 
 If you have any questions on the opening, SixSq, the PAChA project or HEPIA don't hesitate to [get in touch](mailto:jobs@sixsq.com?subject=job%20application).
+
 
 Selection Process
 ===================
