Remove end date on job applications for Pacha & HNX

--- a/_posts/jobs/2015-02-16-job-pacha-2015.md
+++ b/_posts/jobs/2015-02-16-job-pacha-2015.md
@@ -58,4 +58,4 @@ If you have any questions on the opening, SixSq, the PAChA project or HEPIA don'
 Selection Process
 ===================
 
-Interested? Please send your CV, motivation letter and names of 3 references **by 1 March 2015** to   [jobs@sixsq.com](mailto:jobs@sixsq.com?subject=job%20application). Please clearly indicate your preferred starting date.
+Interested? Please send your CV, motivation letter and names of 3 references to   [jobs@sixsq.com](mailto:jobs@sixsq.com?subject=job%20application). Please clearly indicate your preferred starting date.
