update project logos

--- a/_posts/r-and-d/2015-01-01-cyclone.md
+++ b/_posts/r-and-d/2015-01-01-cyclone.md
@@ -1,7 +1,7 @@
 ---
 layout: article
 title: Cyclone 
-image: /img/content/cyclone.png
+image: /img/content/logo_cyclone.png
 category: r-and-d
 ---
 
