--- a/_posts/r-and-d/2015-01-01-scissor.md
+++ b/_posts/r-and-d/2015-01-01-scissor.md
@@ -1,7 +1,7 @@
 ---
 layout: article
 title: SCISSOR  
-image: /img/design/scissor.png
+image: /img/design/logo_scissor.png
 category: r-and-d
 ---
 
