--- a/_posts/r-and-d/2015-01-01-celar.md
+++ b/_posts/r-and-d/2015-01-01-celar.md
@@ -1,7 +1,7 @@
 ---
 layout: article
 title: CELAR
-image: /img/content/logo_celar.png
+image: /img/content/logo_celar.jpg
 category: r-and-d
 ---
 
