Update R&D project pages and list layout

--- a/_posts/r-and-d/2015-01-01-celar.md
+++ b/_posts/r-and-d/2015-01-01-celar.md
@@ -5,16 +5,19 @@ image: /img/content/logo_celar.jpg
 category: r-and-d
 ---
 
-**Goal:** Complete dynamic multi-cloud application management
+The goal of the CELAR project is to develop methods and open-source tools for applying and controlling multi-grained, elastic resource provisioning for Cloud applications in an automated manner.
 
-**Duration:** 36 Months (ends 2015)
+**Project website:** [http://www.celarcloud.eu](http://www.celarcloud.eu)
 
-**Effort:** ...
+**Duration:** 36 Months (ends November 2015)
 
-**Partners:** ...
+**Partners:** 8 lead by [Athena](http://www.athena-innovation.gr)
 
 **Goal for SixSq:** SlipStream is used as the core deployment engine for the project.  Scaling features in SlipStream have been developed based on CELAR requirements.
 
 **Features** 
 
-...
+Dynamic resource allocation will be performed through intelligent decision-making based on:
+
+1. Cloud and application performance metrics collected and cost-evaluated through a scalable monitoring system and exposed to the user.
+2. Qualitative and quantitative characterization of the application‘s performance through modelling of its elastic properties.
