--- a/_posts/r-and-d/2015-01-01-cyclone.md
+++ b/_posts/r-and-d/2015-01-01-cyclone.md
@@ -7,11 +7,11 @@ category: r-and-d
 
 **Goal:** Complete dynamic multi-cloud application management 
 
+**Project website:** Coming soon
+
 **Duration:** 36 Months (ends 31/12/2017) 
 
-**Effort:** 50 PM (~1.4 FTE) 
-
-**Partners:** 7 lead by Interoute 
+**Partners:** 7 lead by [Interoute](http://interoute.com) 
 
 **Goal for SixSq:** Generally bringing SlipStream as a platform for cloud application management and integrating, expanding features for project. 
 
