--- a/_posts/r-and-d/2015-01-01-pacha.md
+++ b/_posts/r-and-d/2015-01-01-pacha.md
@@ -4,15 +4,13 @@ title: PAChA
 category: r-and-d
 ---
 
-**Goal:** Improve NuvlaBox 
+The main goals of PAChA are first to design a new type of private cloud (portable, inexpensive, self-managing and secure appliance) and monitor the resources used by various applications running on it. The second goal is to design tools to estimate the potential savings (based on a pricing model) when deploying applications on cloud.
 
-**Duration:** 15 Months (~March 2015) 
+**Duration:** 15 Months (ends March 2015) 
 
-**Effort:** ~2.5 FTE 
+**Partners:** 2 lead by [HEPIA](http://hepia.hesge.ch)
 
-**Partners:** 2 lead by HEPIA 
-
-**Goal for SixSq:** ... 
+**Goal for SixSq:**
 
 * Security hardening of NuvlaBox
 * Improvements to NuvlaBox, including networking integration and robustness.
