--- a/_posts/r-and-d/2015-01-01-password.md
+++ b/_posts/r-and-d/2015-01-01-password.md
@@ -7,9 +7,9 @@ category: r-and-d
 
 **Goal:** Secure storage on the cloud 
 
-**Duration:** 36 Months (ends 31/12/2017) 
+**Project website:** Coming soon
 
-**Effort:** 35 PM (~1 FTE) 
+**Duration:** 36 Months (ends 31/12/2017) 
 
 **Partners:** 10 lead by CAS 
 
