--- a/_posts/r-and-d/2015-01-01-scissor.md
+++ b/_posts/r-and-d/2015-01-01-scissor.md
@@ -7,14 +7,13 @@ category: r-and-d
 
 **Goal:** Security in SCADA and Smart Grids 
 
-**Duration:** 36 Months (ends 31/12/2017) 
+**Project website:** Coming soon
 
-**Effort:** 35 PM (~1 FTE) 
+**Duration:** 36 Months (ends 31/12/2017) 
 
 **Partners:** 9 lead by Assystem 
 
 **Goal for SixSq:** Bringing NuvlaBox as platform for embedded cloud.  SlipStream and concepts for general integration.
-
 
 **Features** 
 
