Improve overview for better layout in list page

--- a/_posts/r-and-d/2015-01-01-celar.md
+++ b/_posts/r-and-d/2015-01-01-celar.md
@@ -19,5 +19,5 @@ The goal of the CELAR project is to develop methods and open-source tools for ap
 
 Dynamic resource allocation will be performed through intelligent decision-making based on:
 
-1. Cloud and application performance metrics collected and cost-evaluated through a scalable monitoring system and exposed to the user.
-2. Qualitative and quantitative characterization of the application‘s performance through modelling of its elastic properties.
+* Cloud and application performance metrics collected and cost-evaluated through a scalable monitoring system and exposed to the user.
+* Qualitative and quantitative characterization of the application‘s performance through modelling of its elastic properties.
