--- a/_posts/r-and-d/2015-01-01-cyclone.md
+++ b/_posts/r-and-d/2015-01-01-cyclone.md
@@ -5,7 +5,7 @@ image: /img/content/logo_cyclone.png
 category: r-and-d
 ---
 
-**Goal:** Complete dynamic multi-cloud application management 
+The goal of Cyclone is to develop a solution for *complete dynamic multi-cloud application management*, including advanced networking, security, federated identity management, and demonstrated via real life applications. 
 
 **Project website:** Coming soon
 
