--- a/_posts/r-and-d/2015-01-01-password.md
+++ b/_posts/r-and-d/2015-01-01-password.md
@@ -5,7 +5,7 @@ image: /img/content/logo_paasword.png
 category: r-and-d
 ---
 
-**Goal:** Secure storage on the cloud 
+The goal of PaaSword is the creation of secure storage on the cloud, using encryption, advanced policy-based placement and context aware access control logic. This integrated in exploitable cloud environments.
 
 **Project website:** Coming soon
 
@@ -13,10 +13,8 @@ category: r-and-d
 
 **Partners:** 10 lead by CAS 
 
-**Goal for SixSq:** Main contribution is bringing a “use case” for deployment of applications needing secure storage to the cloud.  Integration of project software into a “Platform as a Service”. 
+**Goal for SixSq:** Main contribution is bringing a “use case” for deployment of applications needing secure storage to the cloud.  Integration of project software into SlipStream *Platform as a Service* feature set. 
 
 **Features** 
 
- * Addition of security features to SlipStream to support/enable encrypted data resources.
- * Advanced policy-based deployment of applications based on security needs (e.g. separate database instances for sensitive and non-sensitive data).
- * Context-aware ACLs (e.g. endpoint, location of client, etc.)
+...
