--- a/_posts/r-and-d/2015-01-01-scissor.md
+++ b/_posts/r-and-d/2015-01-01-scissor.md
@@ -5,20 +5,16 @@ image: /img/content/logo_scissor.png
 category: r-and-d
 ---
 
-**Goal:** Security in SCADA and Smart Grids 
+The goal of Scissor is to address security issues in SCADA and Smart Grids 
 
 **Project website:** Coming soon
 
 **Duration:** 36 Months (ends 31/12/2017) 
 
-**Partners:** 9 lead by Assystem 
+**Partners:** 9 lead by [Assystem](http://www.assystem.com/en/home.html) 
 
-**Goal for SixSq:** Bringing NuvlaBox as platform for embedded cloud.  SlipStream and concepts for general integration.
+**Goal for SixSq:** Bringing NuvlaBox as platform for embedded cloud.  SlipStream and concepts for general integration and remote control of NuvlaBoxes.
 
 **Features** 
 
- * Security hardening of both StratusLab and SlipStream
- * Improvements to NuvlaBox, including aggregator for IoT, monitoring, etc.
- * Real-world deployment of NuvlaBox
- * Large overlap with PANOPTESEC (FP7) project from Rhea. 
-
+...
