--- a/_posts/r-and-d/2015-01-01-cyclone.md
+++ b/_posts/r-and-d/2015-01-01-cyclone.md
@@ -1,19 +1,37 @@
 ---
 layout: article
-title: Cyclone 
+title: CYCLONE
 image: /img/content/logo_cyclone.png
 category: r-and-d
 ---
 
-The goal of Cyclone is to develop a solution for *complete dynamic multi-cloud application management*, including advanced networking, security, federated identity management, and demonstrated via real life applications. 
+[CYCLONE][web] develops a solution for *complete dynamic multi-cloud
+application management* from existing, production-quality components.
+The solution will include automated application management, advanced
+networking, end-to-end security, and federated identity management.
+The project will validate and demonstrate the solution via real world
+applications, including bioinformatics and smart grid.
 
-**Project website:** Coming soon
+SixSq brings SlipStream, a multi-cloud application management
+platform, as well as its expertise in cloud computing to the
+collaboration.  SlipStream will be used as the basis for automated
+application deployments and will be extended to include advanced
+networking and security features.  These extensions will benefit
+existing SlipStream users and make it an even more compelling
+solution. 
+
+**Project website:** [http://www.cyclone-project.eu][web]
+
+**Funding** CYCLONE is funded through the European Commission's H2020
+  programme under grant agreement 644925.
 
 **Duration:** 36 Months (ends 31/12/2017) 
 
-**Partners:** 7 lead by [Interoute](http://interoute.com) 
+**Partners:** 7 lead by [Interoute][interoute] 
 
-**Goal for SixSq:** Generally bringing SlipStream as a platform for cloud application management and integrating, expanding features for project. 
+**Goal for SixSq:** Generally bringing SlipStream as a platform for
+  cloud application management and integrating, expanding features for
+  project.
 
 **Features** 
 
@@ -21,3 +39,7 @@ The goal of Cyclone is to develop a solution for *complete dynamic multi-cloud a
  * Inclusion of security features to facilitate the application level security: possibly key generation and  management, encryption, network proxies, etc.
  * Demonstration of real multi-cloud applications and management of cross-site networking and data issues.
  * Integration of networking resources within SlipStream
+
+
+[web]: http://www.cyclone-project.eu
+[interoute]: http://interoute.com
