--- a/_posts/r-and-d/2015-01-01-password.md
+++ b/_posts/r-and-d/2015-01-01-password.md
@@ -5,16 +5,36 @@ image: /img/content/logo_paasword.png
 category: r-and-d
 ---
 
-The goal of PaaSword is the creation of secure storage on the cloud, using encryption, advanced policy-based placement and context aware access control logic. This integrated in exploitable cloud environments.
+Security and data protection issues are a significant barrier to wider
+use of cloud platforms.  PaaSword aims to reduce those barriers by
+providing trusted, secure storage on cloud services.  It will use
+encryption, advanced policy-based placement and context-aware access
+control to realize secure, trusted cloud storage. 
 
-**Project website:** Coming soon
+SixSq will use SlipStream as a "Platform as a Service" to demonstrate
+how the project's storage components can be deployed easily as part of
+a larger, web-based application.  On one hand, SlipStream is a use
+case for the project, but SixSq will also enhance SlipStream with
+features to facilitate the implementation and use of PaaSword storage
+components. 
+
+**Project website:** [http://paasword.eu][web]
+
+**Funding** PaaSword is funded through the European Commission's H2020
+  programme under grant agreement 644814.
 
 **Duration:** 36 Months (ends 31/12/2017) 
 
-**Partners:** 10 lead by CAS 
+**Partners:** 10 lead by [CAS][cas]
 
-**Goal for SixSq:** Main contribution is bringing a “use case” for deployment of applications needing secure storage to the cloud.  Integration of project software into SlipStream *Platform as a Service* feature set. 
+**Goal for SixSq:** Main contribution is bringing a “use case” for
+  deployment of applications needing secure storage to the cloud.
+  Integration of project software into SlipStream *Platform as a
+  Service* feature set.
 
 **Features** 
 
 ...
+
+[web]: http://paasword.eu 
+[cas]: http://www.cas.de/en/homepage.html
