--- a/_posts/r-and-d/2015-01-01-scissor.md
+++ b/_posts/r-and-d/2015-01-01-scissor.md
@@ -5,16 +5,38 @@ image: /img/content/logo_scissor.png
 category: r-and-d
 ---
 
-The goal of Scissor is to address security issues in SCADA and Smart Grids 
+With a holistic approach, [SCISSOR][web] designs a new generation
+SCADA security monitoring framework to allow for connected, yet
+secure, industrial control systems.  The framework contains four
+primary components: monitoring, control, analysis/decision, and a
+human-machine interface.  Cloud technologies touch all of these
+components, giving the system a unprecidented level of flexibility,
+computing power, and resonsiveness.
 
-**Project website:** Coming soon
+SixSq brings its NuvlaBox concept and technology to the project.  This
+allows a cloud computing platform to be embedded directly into the
+system allowing tailored, local analysis of monitoring information.
+Use of the NuvlaBox also allows remote control of the computing
+platform through SlipStream.  Through the project, SixSq will further
+enhance the capabilities of the NuvlaBox while hardening both the
+hardware and software for challenging real-world SCADA deployment.
+
+**Project website:** [http://scissor-project.eu][web]
+
+**Funding** SCISSOR is funded through the European Commission's H2020
+  programme under grant agreement 644425.
 
 **Duration:** 36 Months (ends 31/12/2017) 
 
-**Partners:** 9 lead by [Assystem](http://www.assystem.com/en/home.html) 
+**Partners:** 9 lead by [Assystem][assystem] 
 
-**Goal for SixSq:** Bringing NuvlaBox as platform for embedded cloud.  SlipStream and concepts for general integration and remote control of NuvlaBoxes.
+**Goal for SixSq:** Bringing NuvlaBox as platform for embedded cloud.
+  SlipStream and concepts for general integration and remote control
+  of NuvlaBoxes.
 
 **Features** 
 
 ...
+
+[web]: http://scissor-project.eu
+[assystem]: http://www.assystem.com/en/home.html
