--- a/_posts/r-and-d/2015-01-01-scissor.md
+++ b/_posts/r-and-d/2015-01-01-scissor.md
@@ -10,8 +10,8 @@ SCADA security monitoring framework to allow for connected, yet
 secure, industrial control systems.  The framework contains four
 primary components: monitoring, control, analysis/decision, and a
 human-machine interface.  Cloud technologies touch all of these
-components, giving the system a unprecidented level of flexibility,
-computing power, and resonsiveness.
+components, giving the system a unprecedented level of flexibility,
+computing power and responsiveness.
 
 SixSq brings its NuvlaBox concept and technology to the project.  This
 allows a cloud computing platform to be embedded directly into the
@@ -33,10 +33,6 @@ hardware and software for challenging real-world SCADA deployment.
 **Goal for SixSq:** Bringing NuvlaBox as platform for embedded cloud.
   SlipStream and concepts for general integration and remote control
   of NuvlaBoxes.
-
-**Features** 
-
-...
 
 [web]: http://scissor-project.eu
 [assystem]: http://www.assystem.com/en/home.html
