--- a/_posts/r-and-d/2015-01-01-celar.md
+++ b/_posts/r-and-d/2015-01-01-celar.md
@@ -3,6 +3,7 @@ layout: article
 title: CELAR
 image: /img/content/logo_celar.jpg
 category: r-and-d
+permalink: /r-and-d/celar
 ---
 
 The goal of the CELAR project is to develop methods and open-source tools for applying and controlling multi-grained, elastic resource provisioning for Cloud applications in an automated manner.
