--- a/_posts/r-and-d/2015-01-01-paasword.md
+++ b/_posts/r-and-d/2015-01-01-paasword.md
@@ -3,6 +3,7 @@ layout: article
 title: PaaSword 
 image: /img/content/logo_paasword.png
 category: r-and-d
+permalink: /r-and-d/password
 ---
 
 Security and data protection issues are a significant barrier to wider
