--- a/_posts/r-and-d/2015-01-01-pacha.md
+++ b/_posts/r-and-d/2015-01-01-pacha.md
@@ -3,6 +3,7 @@ layout: article
 title: PAChA
 image: /img/content/nuvlabox/nuvlabox_synthetic.png
 category: r-and-d
+permalink: /r-and-d/pacha
 ---
 
 The main goals of PAChA are first to design a new type of private cloud
