--- a/_posts/r-and-d/2015-01-01-cyclone.md
+++ b/_posts/r-and-d/2015-01-01-cyclone.md
@@ -3,6 +3,7 @@ layout: article
 title: CYCLONE
 image: /img/content/logo_cyclone.png
 category: r-and-d
+permalink: /r-and-d/cyclone
 ---
 
 [CYCLONE][web] develops a solution for *complete dynamic multi-cloud
