--- a/_posts/r-and-d/2015-01-01-scissor.md
+++ b/_posts/r-and-d/2015-01-01-scissor.md
@@ -3,6 +3,7 @@ layout: article
 title: SCISSOR  
 image: /img/content/logo_scissor.png
 category: r-and-d
+permalink: /r-and-d/scissor
 ---
 
 With a holistic approach, [SCISSOR][web] designs a new generation
