Add redirects from previous page structure

--- a/_posts/r-and-d/2015-01-01-paasword.md
+++ b/_posts/r-and-d/2015-01-01-paasword.md
@@ -4,6 +4,9 @@ title: PaaSword
 image: /img/content/logo_paasword.png
 category: r-and-d
 permalink: /r-and-d/password
+redirect_from:
+  - /r-and-d/2015/01/01/paasword.html
+  - /r-and-d/2015/01/01/paasword/
 ---
 
 Security and data protection issues are a significant barrier to wider
