--- a/_posts/r-and-d/2015-01-01-pacha.md
+++ b/_posts/r-and-d/2015-01-01-pacha.md
@@ -4,6 +4,9 @@ title: PAChA
 image: /img/content/nuvlabox/nuvlabox_synthetic.png
 category: r-and-d
 permalink: /r-and-d/pacha
+redirect_link:
+  - /r-and-d/2015/01/01/pacha.html
+  - /r-and-d/2015/01/01/pacha/
 ---
 
 The main goals of PAChA are first to design a new type of private cloud
