--- a/_posts/r-and-d/2015-01-01-scissor.md
+++ b/_posts/r-and-d/2015-01-01-scissor.md
@@ -4,6 +4,9 @@ title: SCISSOR
 image: /img/content/logo_scissor.png
 category: r-and-d
 permalink: /r-and-d/scissor
+redirect_from:
+  - /r-and-d/2015/01/01/scissor.html
+  - /r-and-d/2015/01/01/scissor/
 ---
 
 With a holistic approach, [SCISSOR][web] designs a new generation
