--- a/_posts/r-and-d/2015-01-01-cyclone.md
+++ b/_posts/r-and-d/2015-01-01-cyclone.md
@@ -4,6 +4,9 @@ title: CYCLONE
 image: /img/content/logo_cyclone.png
 category: r-and-d
 permalink: /r-and-d/cyclone
+redirect_link:
+  - /r-and-d/2015/01/01/cyclone.html
+  - /r-and-d/2015/01/01/cyclone/
 ---
 
 [CYCLONE][web] develops a solution for *complete dynamic multi-cloud
