Update html title

--- a/_posts/customers/2012-01-01-customer-310-esa.md
+++ b/_posts/customers/2012-01-01-customer-310-esa.md
@@ -1,6 +1,7 @@
 ---
 layout: article
 title: European Space Agency (ESA)
+head-title: Our Customers&#58; ESA
 image: /img/design/logo_esa.png
 category: customers
 permalink: /customers/esa.html
