--- a/_posts/r-and-d/2015-01-01-cyclone.md
+++ b/_posts/r-and-d/2015-01-01-cyclone.md
@@ -1,6 +1,7 @@
 ---
 layout: article
 title: CYCLONE
+head-title: CYCLONE&#58; dynamic multi-cloud application management
 image: /img/content/logo_cyclone.png
 category: r-and-d
 permalink: /r-and-d/cyclone
