--- a/_posts/r-and-d/2015-01-01-paasword.md
+++ b/_posts/r-and-d/2015-01-01-paasword.md
@@ -1,6 +1,7 @@
 ---
 layout: article
 title: PaaSword 
+head-title: PaaSword&#58; security and data protection in the cloud
 image: /img/content/logo_paasword.png
 category: r-and-d
 permalink: /r-and-d/password
