--- a/_posts/r-and-d/2015-01-01-pacha.md
+++ b/_posts/r-and-d/2015-01-01-pacha.md
@@ -1,6 +1,7 @@
 ---
 layout: article
 title: PAChA
+head-title: PAChA&#58; portable, inexpensive, self managing &amp; secure cloud
 image: /img/content/nuvlabox/nuvlabox_synthetic.png
 category: r-and-d
 permalink: /r-and-d/pacha
