--- a/_posts/customers/2012-01-01-customer-350-ebu.md
+++ b/_posts/customers/2012-01-01-customer-350-ebu.md
@@ -1,6 +1,7 @@
 ---
 layout: article
 title: EBU/UER
+head-title: Our Customers&#58; EBU/UER
 image: /img/content/logo_ebu-uer.png
 category: customers
 permalink: /customers/ebu.html
