--- a/_posts/r-and-d/2015-01-01-celar.md
+++ b/_posts/r-and-d/2015-01-01-celar.md
@@ -1,6 +1,7 @@
 ---
 layout: article
 title: CELAR
+head-title: CELAR&#58; elastic cloud application deployment
 image: /img/content/logo_celar.jpg
 category: r-and-d
 permalink: /r-and-d/celar
