--- a/_posts/r-and-d/2015-01-01-scissor.md
+++ b/_posts/r-and-d/2015-01-01-scissor.md
@@ -1,6 +1,7 @@
 ---
 layout: article
 title: SCISSOR  
+head-title: SCISSOR&#58; security monitoring for industrial control systems
 image: /img/content/logo_scissor.png
 category: r-and-d
 permalink: /r-and-d/scissor
