News posting on November training event plus update images on news page

--- a/_posts/news/2012-07-09-news-hn-2012-GA.md
+++ b/_posts/news/2012-07-09-news-hn-2012-GA.md
@@ -1,7 +1,7 @@
 ---
 layout: article
 title: European science champions score an early goal for cloud
-image: /img/design/stratuslab_category.png
+image: /img/content/HNX_4.png
 category: news
 ---
 
