Add trailing slash

--- a/_posts/r-and-d/2015-01-01-scissor.md
+++ b/_posts/r-and-d/2015-01-01-scissor.md
@@ -4,7 +4,7 @@ title: SCISSOR
 head-title: SCISSOR&#58; security monitoring for industrial control systems
 image: /img/content/logo_scissor.png
 category: r-and-d
-permalink: /r-and-d/scissor
+permalink: /r-and-d/scissor/
 redirect_from:
   - /r-and-d/2015/01/01/scissor.html
   - /r-and-d/2015/01/01/scissor/
