Add trailing slash

--- a/_posts/r-and-d/2015-01-01-celar.md
+++ b/_posts/r-and-d/2015-01-01-celar.md
@@ -4,7 +4,7 @@ title: CELAR
 head-title: CELAR&#58; elastic cloud application deployment
 image: /img/content/logo_celar.jpg
 category: r-and-d
-permalink: /r-and-d/celar
+permalink: /r-and-d/celar/
 redirect_from:
   - /r-and-d/2015/01/01/celar.html
   - /r-and-d/2015/01/01/celar/
