--- a/_posts/r-and-d/2015-01-01-pacha.md
+++ b/_posts/r-and-d/2015-01-01-pacha.md
@@ -4,7 +4,7 @@ title: PAChA
 head-title: PAChA&#58; portable, inexpensive, self managing &amp; secure cloud
 image: /img/content/nuvlabox/nuvlabox_synthetic.png
 category: r-and-d
-permalink: /r-and-d/pacha
+permalink: /r-and-d/pacha/
 redirect_link:
   - /r-and-d/2015/01/01/pacha.html
   - /r-and-d/2015/01/01/pacha/
