--- a/_posts/r-and-d/2015-01-01-cyclone.md
+++ b/_posts/r-and-d/2015-01-01-cyclone.md
@@ -4,7 +4,7 @@ title: CYCLONE
 head-title: CYCLONE&#58; dynamic multi-cloud application management
 image: /img/content/logo_cyclone.png
 category: r-and-d
-permalink: /r-and-d/cyclone
+permalink: /r-and-d/cyclone/
 redirect_link:
   - /r-and-d/2015/01/01/cyclone.html
   - /r-and-d/2015/01/01/cyclone/
