--- a/_posts/r-and-d/2015-01-01-scissor.md
+++ b/_posts/r-and-d/2015-01-01-scissor.md
@@ -26,7 +26,7 @@ platform through SlipStream.  Through the project, SixSq will further
 enhance the capabilities of the NuvlaBox while hardening both the
 hardware and software for challenging real-world SCADA deployment.
 
-**Project website:** [http://scissor-project.eu][web]
+**Project website:** [http://scissor-project.com][web]
 
 **Funding** SCISSOR is funded through the European Commission's H2020
   programme under grant agreement 644425.
@@ -39,5 +39,5 @@ hardware and software for challenging real-world SCADA deployment.
   SlipStream and concepts for general integration and remote control
   of NuvlaBoxes.
 
-[web]: http://scissor-project.eu
+[web]: http://scissor-project.com
 [assystem]: http://www.assystem.com/en/home.html
