Add SERI contract details to R&D page

--- a/_posts/r-and-d/2015-01-01-paasword.md
+++ b/_posts/r-and-d/2015-01-01-paasword.md
@@ -27,7 +27,7 @@ components.
 **Project website:** [http://paasword.eu][web]
 
 **Funding** PaaSword is funded through the European Commission's H2020
-  programme under grant agreement 644814.
+  programme under grant agreement 644814. SixSq is supported by the Swiss State Secretariat for Education, Research and Innovation **[SERI][seri]** under contract number 15.0047.
 
 **Duration:** 36 Months (ends 31/12/2017) 
 
@@ -40,3 +40,4 @@ components.
 
 [web]: http://paasword.eu 
 [cas]: http://www.cas.de/en/homepage.html
+[seri]: https://www.sbfi.admin.ch/sbfi/en/home.html
