--- a/_posts/r-and-d/2015-01-01-cyclone.md
+++ b/_posts/r-and-d/2015-01-01-cyclone.md
@@ -28,8 +28,12 @@ solution.
 
 **Project website:** [http://www.cyclone-project.eu][web]
 
+**Twitter:** [https://twitter.com/H2020_CYCLONE][@H2020_CYCLONE]
+
+**Facebook:** [https://www.facebook.com/h2020cyclone/][H2020 Cyclone]
+
 **Funding** CYCLONE is funded through the European Commission's H2020
-  programme under grant agreement 644925.
+  programme under grant agreement 644925. SixSq is supported by the Swiss State Secretariat for Eduication, Research and Innovation **[SERI][seri]** under contract number 15.0034
 
 **Duration:** 36 Months (ends 31/12/2017) 
 
@@ -49,3 +53,6 @@ solution.
 
 [web]: http://www.cyclone-project.eu
 [interoute]: http://interoute.com
+[seri]: https://www.sbfi.admin.ch/sbfi/en/home.html
+[@H2020_CYCLONE]: https://twitter.com/H2020_CYCLONE
+[H2020 Cyclone]: https://www.facebook.com/h2020cyclone/
