--- a/_posts/r-and-d/2015-01-01-scissor.md
+++ b/_posts/r-and-d/2015-01-01-scissor.md
@@ -29,8 +29,10 @@ hardware and software for challenging real-world SCADA deployment.
 
 **Project website:** [http://scissor-project.com][web]
 
+**Twitter:** [https://twitter.com/SCISSOR_2015][@SCISSOR_2015]
+
 **Funding** SCISSOR is funded through the European Commission's H2020
-  programme under grant agreement 644425.
+  programme under grant agreement 644425. SixSq is supported by the Swiss State Secretariat for Eduication, Research and Innovation **[SERI][seri]** under contract number 15.0022.
 
 **Duration:** 36 Months (ends 31/12/2017) 
 
@@ -42,3 +44,5 @@ hardware and software for challenging real-world SCADA deployment.
 
 [web]: http://scissor-project.com
 [assystem]: http://www.assystem.com/en/home.html
+[seri]: https://www.sbfi.admin.ch/sbfi/en/home.html
+[@SCISSOR_2015]: https://twitter.com/SCISSOR_2015
