--- a/_posts/r-and-d/2017-01-31-eusec.md
+++ b/_posts/r-and-d/2017-01-31-eusec.md
@@ -16,11 +16,29 @@ The EU-SEC project is studying ways to improve approaches to trust, assurance an
 The EU-SEC framework will equip stakeholders in the ICT security ecosystem with a validated governance structure, a reference architecture, and the corresponding set of tools to improve the efficiency and effectiveness of their current approach to security governance, risk management, assurance and compliance. The EU-SEC aims to enhance trustworthiness and transparency in the ICT supply chain through business cases developed and piloted by industrial partners. 
 
 **Funding** EU-SEC is funded through the European Commission's H2020
-  programme under grant agreement 731845 . SixSq is funded by SERI
+  programme under grant agreement 731845 . SixSq is funded by SERI under contract number 17.0004.
 
 **Duration:** 36 Months (ends 31 December 2019) 
 
-**Partners:** 9 partners led by [Fraunhofer](https://www.fraunhofer.de)
+**Partners:** 
+
+The project involves nine partners from seven countries:
+
+- [Fraunhofer](https://www.fraunhofer.de), Germany. Consortium leader.
+
+- [Cloud Security Alliance](https://cloudsecurityalliance.org), UK
+
+- [Fabasoft Cloud](https://www.fabasoft.com/en/), Austria 
+
+- [Ministry of Finance](http://www.finance.gov.sk/en/), Slovakia
+
+- [Ministry of public administration](http://www.mju.gov.si/en/), Slovenia
+
+- [NIXU](https://www.nixu.com), Finland 
+
+- [PwC](hhttp://www.pwc.de/en/), Germany
+
+- [SixSq](http://sixsq.com), Switzerland 
 
 
 
