--- a/_posts/r-and-d/2017-01-31-mf2c.md
+++ b/_posts/r-and-d/2017-01-31-mf2c.md
@@ -2,13 +2,14 @@
 layout: article
 title: Mf2c  
 head-title: Mf2c&#58; security monitoring for industrial control systems
-image: /img/content/logo_sixsq.png
+image: /img/content/logo_mf2c.png
 class: r-and-d
 category: resources
 permalink: /r-and-d/Mf2c/
 ---
-
-**Fog computing** brings cloud computing capabilities closer to the end-device and users. When put together, cloud and fog computing create a new stack of resources, which we refer to as Fog-to-Cloud (F2C), creating the need for a new, open and coordinated management ecosystem. T
+**Mobile Fog-to-Cloud**
+	
+**Fog computing** brings cloud computing capabilities closer to the end-device and users. When put together, cloud and fog computing create a new stack of resources, which we refer to as Fog-to-Cloud (F2C), creating the need for a new, open and coordinated management ecosystem. The mF2C project sets the goal of designing an open, secure, decentralized, multi-stakeholder management framework, including novel programming models, privacy and security, data storage techniques, service creation, brokerage solutions, SLA policies, and resource orchestration methods. The framework sets the foundations for a novel distributed system architecture, developing a proof-of-concept system and platform, to be tested and validated in real-world use cases, as envisioned by the industrial partners in the consortium with significant interest in rapid innovation in the cloud computing sector.
 
 **Project Focus**
 
@@ -19,13 +20,10 @@ permalink: /r-and-d/Mf2c/
 * SLA policies
 * resource orchestration methods
 
-The framework sets the foundations for a novel distributed system architecture, developing a proof-of-concept system and platform, to be tested and validated in real-world use cases, as envisioned by the industrial partners in the consortium with significant interest in rapid innovation in the cloud computing sector.
-
-
 **Funding** Mf2c is funded through the European Commission's H2020
-  programme under grant agreement 730929. SixSq is funded by SERI
+  programme under grant agreement 730929. SixSq is funded by SERI under contract number 16.0202.
 
-**Duration:** 36 Months (ends 31/12/2017) 
+**Duration:** 01 January 2017 to 31 December 2019.
 
 **Partners:** 10 lead by ATOS Spain SA
 
