--- a/_posts/r-and-d/2017-01-31-mf2c.md
+++ b/_posts/r-and-d/2017-01-31-mf2c.md
@@ -20,6 +20,8 @@ permalink: /r-and-d/Mf2c/
 * SLA policies
 * resource orchestration methods
 
+**Project Website** [http://mf2c-project.eu](http://mf2c-project.eu)
+
 **Funding** Mf2c is funded through the European Commission's H2020
   programme under grant agreement 730929. SixSq is funded by SERI under contract number 16.0202.
 
