News item on mF2C, small changes to R&D entries

--- a/_posts/r-and-d/2017-01-31-eusec.md
+++ b/_posts/r-and-d/2017-01-31-eusec.md
@@ -36,7 +36,7 @@ The project involves nine partners from seven countries:
 
 - [NIXU](https://www.nixu.com), Finland 
 
-- [PwC](hhttp://www.pwc.de/en/), Germany
+- [PwC](http://www.pwc.de/en/), Germany
 
 - [SixSq](http://sixsq.com), Switzerland 
 
