--- a/_posts/r-and-d/2017-01-31-mf2c.md
+++ b/_posts/r-and-d/2017-01-31-mf2c.md
@@ -1,7 +1,7 @@
 ---
 layout: article
-title: Mf2c  
-head-title: Mf2c&#58; security monitoring for industrial control systems
+title: mF2C  
+head-title: mF2C&#58; addressing the need for an open and coordinated management of fog and cloud computing 
 image: /img/content/logo_mf2c.png
 class: r-and-d
 category: resources
@@ -20,9 +20,14 @@ permalink: /r-and-d/Mf2c/
 * SLA policies
 * resource orchestration methods
 
+
+**SixSq's role in the project:** 
+
+Within the project, SixSq will bring its experience in building cloud systems and early work in IoT and edge computing to the overall architecture. Furthermore, SixSq will also share its vision in building highly valuable products and services, such as the open source SlipStream solution, the Nuvla service and the NuvlaBox product range.  As a professional agile pratitioner, SixSq will contribute and share its industrial software development practices to ensure that mF2C results are of the highest possible quality. SixSq will quikcly integrate mF2C results into its commercial products and services.
+
 **Project Website** [http://mf2c-project.eu](http://mf2c-project.eu)
 
-**Funding** Mf2c is funded through the European Commission's H2020
+**Funding** mf2c is funded through the European Commission's H2020
   programme under grant agreement 730929. SixSq is funded by SERI under contract number 16.0202.
 
 **Duration:** 01 January 2017 to 31 December 2019.
