Small changes to mF2C news & page

--- a/_posts/r-and-d/2017-01-31-mf2c.md
+++ b/_posts/r-and-d/2017-01-31-mf2c.md
@@ -32,5 +32,27 @@ Within the project, SixSq will bring its experience in building cloud systems an
 
 **Duration:** 01 January 2017 to 31 December 2019.
 
-**Partners:** 10 lead by ATOS Spain SA
+**Partners:** 
 
+The project involves ten partners:
+
+- [Atos](http://booklet.atosresearch.eu), Spain
+
+- [Xlab](http://www.xlab.si/?lang=en), Slovenia 
+
+- [The Universitat Politècnica de Catalunya (UPC)](http://www.upc.edu), Spain
+
+- [The Technische Universität Carolo-Wilhelmina zu Braunschweig (TUBS)](https://www.tu-braunschweig.de), Germany
+
+- [Intel](http://www.intel.eu/content/www/eu/en/research/intel-labs.html), Ireland
+
+- [The Barcelona Supercomputing Center (BSC)](https://www.bsc.es), Spain 
+
+- [Worldsensing](http://www.worldsensing.com), UK
+
+- [Tiscali Italia S.p.A.](http://investors.tiscali.it/it/), Italy
+
+- [Science Technology Facilities Council(STFC)](http://www.stfc.ac.uk), UK
+
+
+- SixSq, Switzerland 
