Add EU-SEC website to R&D page

--- a/_posts/r-and-d/2017-01-31-eusec.md
+++ b/_posts/r-and-d/2017-01-31-eusec.md
@@ -20,6 +20,8 @@ The EU-SEC framework will equip stakeholders in the ICT security ecosystem with 
 
 **Duration:** 36 Months (ends 31 December 2019) 
 
+**Project website:** [http://www.sec-cert.eu][web]
+
 **Partners:** 
 
 The project involves nine partners from seven countries:
@@ -39,6 +41,8 @@ The project involves nine partners from seven countries:
 - [PwC](http://www.pwc.de/en/), Germany
 
 - [SixSq](http://sixsq.com), Switzerland 
+
+[web]: http://www.sec-cert.eu
 
 
 
