Small change to job posting page

--- a/_posts/jobs/2017-05-30-no-openings-2017.md
+++ b/_posts/jobs/2017-05-30-no-openings-2017.md
@@ -1,11 +1,10 @@
 ---
-layout: article_job
+layout: article_plain
 title: Job Openings
 category: about
 class: jobs
 image: /img/design/slipstream_category.png
 ---
-
 
 
 There are no vacancies at the moment. Please check back another time!
