Update contact page to include directions and update look. Small change to job page

--- a/_posts/jobs/2017-05-30-no-openings-2017.md
+++ b/_posts/jobs/2017-05-30-no-openings-2017.md
@@ -1,5 +1,5 @@
 ---
-layout: article_plain
+layout: simple
 title: Job Openings
 category: about
 class: jobs
@@ -7,4 +7,4 @@ image: /img/design/slipstream_category.png
 ---
 
 
-There are no vacancies at the moment. Please check back another time!
+There are no vacancies at the moment. Please check back another time.
