Move IBM from customers to partners

--- a/_posts/partners/2017-06-15-partner-300-ibm.md
+++ b/_posts/partners/2017-06-15-partner-300-ibm.md
@@ -1,9 +1,9 @@
 ---
 layout: article
 title: BM Partner World Member
-head-title: Our Customers&#58; IBM
+head-title: Our Partners&#58; IBM
 image: /img/content/ibm-partner-logo.png
-class: customers
+class: partners
 category: about
 permalink: /partners/ibm.html
 ---
