Update About Us and Partner page

--- a/_posts/partners/2017-06-15-partner-300-ibm.md
+++ b/_posts/partners/2017-06-15-partner-300-ibm.md
@@ -1,6 +1,6 @@
 ---
 layout: article
-title: BM Partner World Member
+title: IBM Partner World Member
 head-title: Our Partners&#58; IBM
 image: /img/content/ibm-partner-logo.png
 class: partners
