--- a/_posts/r-and-d/2015-01-01-celar.md
+++ b/_posts/r-and-d/2015-01-01-celar.md
@@ -13,7 +13,7 @@ redirect_from:
 
 The goal of the CELAR project is to develop methods and open-source tools for applying and controlling multi-grained, elastic resource provisioning for Cloud applications in an automated manner.
 
-**Project website:** [http://www.celarcloud.eu](http://www.celarcloud.eu)
+**Project website:** [http://celarcloudproject.eu](http://celarcloudproject.eu)
 
 **Duration:** 36 Months (ends November 2015)
 
