Correct spelling mistake on R&D pages

--- a/_posts/r-and-d/2015-01-01-scissor.md
+++ b/_posts/r-and-d/2015-01-01-scissor.md
@@ -32,7 +32,7 @@ hardware and software for challenging real-world SCADA deployment.
 **Twitter:** [https://twitter.com/SCISSOR_2015][@SCISSOR_2015]
 
 **Funding** SCISSOR is funded through the European Commission's H2020
-  programme under grant agreement 644425. SixSq is supported by the Swiss State Secretariat for Eduication, Research and Innovation **[SERI][seri]** under contract number 15.0022.
+  programme under grant agreement 644425. SixSq is supported by the Swiss State Secretariat for Education, Research and Innovation **[SERI][seri]** under contract number 15.0022.
 
 **Duration:** 36 Months (ends 31/12/2017) 
 
