--- a/_posts/r-and-d/2015-01-01-cyclone.md
+++ b/_posts/r-and-d/2015-01-01-cyclone.md
@@ -33,7 +33,7 @@ solution.
 **Facebook:** [https://www.facebook.com/h2020cyclone/][H2020 Cyclone]
 
 **Funding** CYCLONE is funded through the European Commission's H2020
-  programme under grant agreement 644925. SixSq is supported by the Swiss State Secretariat for Eduication, Research and Innovation **[SERI][seri]** under contract number 15.0034
+  programme under grant agreement 644925. SixSq is supported by the Swiss State Secretariat for Education, Research and Innovation **[SERI][seri]** under contract number 15.0034
 
 **Duration:** 36 Months (ends 31/12/2017) 
 
