Changes to welcome page

--- a/_welcome/banner/2018-01-01-future.md
+++ b/_welcome/banner/2018-01-01-future.md
@@ -1,8 +1,8 @@
 ---
 layout: welcome
-title: Secure and Intelligent Edge Solution
-link: /solutions
+title: Secure and Intelligent Edge Solutions
+link: /solutions/nuvlacity/overview
 class: banner
 ---
 
-Discover our Smart City platform that delivers real benefits for citizens, securely and at scale
+Discover our Smart City platform that delivers real benefits to citizens. Secure, scalable, affordable. 
