--- a/_welcome/banner/2018-01-01-neutral.md
+++ b/_welcome/banner/2018-01-01-neutral.md
@@ -1,8 +1,10 @@
 ---
 layout: welcome
-title: Cloud Neutral Solutions
-link: /solutions
+title: Secure IoT services for a smarter connected world
+link: /solutions/nuvlacity/overview
 class: banner
 ---
 
-DevOps - Big Data - Smart City - IoT - Cyber Security. Our cutting-edge cloud technologies give you friction-less application deployment automation and all the tools you need to understand your cloud usage, control your costs and get more out of the cloud.
+Our cutting-edge cloud technologies simplify the delivery of IoT services to bring cities the systems they need. 
+
+
