--- a/_welcome/target-audience/2018-01-01-eosc.md
+++ b/_welcome/target-audience/2018-01-01-eosc.md
@@ -1,8 +1,10 @@
 ---
-title: European Open Science Cloud
-link: /solutions
+title: Science
+link: /solutions/nuvlascience/overview
 image: /img/icon/eosc.png
 class: target-audience
 ---
 
-Lorem ipsum dolor consectetur adipisicing
+Large research laboratories such as CERN are using NuvlaScience to access scientific data and carry out modelling and statistical analysis.
+
+This benefits areas such as bioinformatics, life sciences and high-energy physics. 
