--- a/_welcome/target-audience/2018-01-01-industry.md
+++ b/_welcome/target-audience/2018-01-01-industry.md
@@ -1,10 +1,10 @@
 ---
 title: Industry
-link: /solutions
+link: /solutions/nuvlacity/overview
 image: /img/icon/tech_partners.png
 class: target-audience
 ---
 
-System integrators (e.g. Strabag, Citelum, Engie, Vinci)
+System integrators differentiate their smart city solutions by using NuvlaCity to provide secure remote management, self-healing and much more.
 
-Subject matter experts (e.g. light manufacturers such as Schréder, Philips)
+Lighting manufacturers incorporate Volumlight into their luminaires to provide the savings only true adaptive lighting can deliver. 
