--- a/_products-and-services/nuvlabox/features/8-in-1.md
+++ b/_products-and-services/nuvlabox/features/8-in-1.md
@@ -1,8 +1,8 @@
 ---
 product: nuvlabox
-title: Ability to run up to 8 virtual machines on the NuvlaBox
+title: Hyperconverged
 class: feature
-icon: fa-envira
+icon: fa-compress
 ---
 
 No need for a farm of servers, with different maintenance contracts and corresponding administrative headaches. With NuvlaBox, you size your virtual machines and deploy applications, without needing to procure new hardware. If you run out of resources, simply stack NuvlaBoxes together and run them as a single unit.
