--- a/_products-and-services/nuvlabox/hardware/hpe/4-el4000.md
+++ b/_products-and-services/nuvlabox/hardware/hpe/4-el4000.md
@@ -4,7 +4,7 @@ class: hardware
 supplier: hpe
 product-name: NuvlaBox++
 supplier-name: HPE EL4000
-supplier-url: /asdasda
+supplier-url: https://www.hpe.com/us/en/product-catalog/servers/edgeline-systems/pip.hpe-edgeline-el4000-converged-edge-system.1008670180.html
 supplier-img: /img/content/nuvlabox/hpe/el4000.png
 ---
 
