--- a/_products-and-services/nuvlabox/hardware/logic-supply/ml100.md
+++ b/_products-and-services/nuvlabox/hardware/logic-supply/ml100.md
@@ -3,8 +3,8 @@ product: nuvlabox
 class: hardware
 supplier: logic-supply
 product-name: NuvlaBox Mini
-supplier-name: Logic Supply ML210
-supplier-url: /asdasda
+supplier-name: Logic Supply ML100G-30
+supplier-url: https://www.logicsupply.com/ml100g-30/
 supplier-img: /img/content/nuvlabox/logic-supply/nuvlabox-mini-v2.png
 ---
 
