--- a/_products-and-services/nuvlabox/hardware/logic-supply/ml600.md
+++ b/_products-and-services/nuvlabox/hardware/logic-supply/ml600.md
@@ -3,10 +3,10 @@ product: nuvlabox
 class: hardware
 supplier: logic-supply
 product-name: NuvlaBox Standard
-supplier-name: Logic Supply ML600
-supplier-url: /asdasda
+supplier-name: Logic Supply ML600G-50
+supplier-url: https://www.logicsupply.com/ml600g-50/
 supplier-img: /img/content/nuvlabox/logic-supply/nuvlabox-v2.png
 ---
 
-4 VMs, 4 cores, 8 GB RAM, 120 GB SSD
-Fanless device, ideal for small footprint edge applications
+8 VMs, 8 cores, 16 GB RAM, 512 GB SSD
+Fanless device, ideal for office private cloud applications
