--- a/_products-and-services/nuvlabox/hardware/hpe/1-gl10.md
+++ b/_products-and-services/nuvlabox/hardware/hpe/1-gl10.md
@@ -4,10 +4,10 @@ class: hardware
 supplier: hpe
 product-name: NuvlaBox Mini
 supplier-name: HPE GL10
-supplier-url: /asdasda
+supplier-url: https://www.hpe.com/us/en/product-catalog/servers/edgeline-systems/pip.hpe-edgeline-el10-intelligent-gateway.1008670386.html
 supplier-img: /img/content/nuvlabox/hpe/gl10.png
 ---
 
-4 VMs, 4 cores, 8 GB RAM, 120 GB SSD
+4 VMs, 4 cores, 4 GB RAM, 32 GB SSD
 
 Fanless device, ideal for small footprint edge applications
