--- a/_products-and-services/nuvlabox/hardware/hpe/3-el1000.md
+++ b/_products-and-services/nuvlabox/hardware/hpe/3-el1000.md
@@ -4,7 +4,7 @@ class: hardware
 supplier: hpe
 product-name: NuvlaBox+
 supplier-name: HPE EL1000
-supplier-url: /asdasda
+supplier-url: https://www.hpe.com/us/en/product-catalog/servers/edgeline-systems/pip.hpe-edgeline-el1000-converged-edge-system.1008670396.html
 supplier-img: /img/content/nuvlabox/hpe/el1000.png
 ---
 
