--- a/_products-and-services/nuvlabox/hardware/hpe/2-gl20.md
+++ b/_products-and-services/nuvlabox/hardware/hpe/2-gl20.md
@@ -10,4 +10,4 @@ supplier-img: /img/content/nuvlabox/hpe/gl20.png
 
 8 VMs, 8 cores, 8 GB RAM, 64 GB SSD
 
-Fanless device, i, ideal for video processing and medium load edge applications
+Fanless device, ideal for video processing and medium load edge applications
