--- a/_products-and-services/nuvlabox/hardware/hpe/4-el4000.md
+++ b/_products-and-services/nuvlabox/hardware/hpe/4-el4000.md
@@ -8,6 +8,6 @@ supplier-url: https://www.hpe.com/us/en/product-catalog/servers/edgeline-systems
 supplier-img: /img/content/nuvlabox/hpe/el4000.png
 ---
 
-64 VMs, 64 cores, 96 GB RAM, 1 TB SSD
-Rack mounted and highly configurable
+64 VMs, 64 cores, 96 GB RAM, 1 TB SSD.
+Rack mounted and highly configurable.
 Highly configurable
