--- a/_products-and-services/nuvlabox/hardware/logic-supply/ml600.md
+++ b/_products-and-services/nuvlabox/hardware/logic-supply/ml600.md
@@ -8,5 +8,5 @@ supplier-url: https://www.logicsupply.com/ml600g-50/
 supplier-img: /img/content/nuvlabox/logic-supply/nuvlabox-v2.png
 ---
 
-8 VMs, 8 cores, 16 GB RAM, 512 GB SSD
+8 VMs, 8 cores, 16 GB RAM, 512 GB SSD.
 Fanless device, ideal for office private cloud applications
