News item on HNSciCloud event and update news in focus

--- a/_news/2018-09-03-smart-city-day-2018.md
+++ b/_news/2018-09-03-smart-city-day-2018.md
@@ -1,13 +1,14 @@
 ---
 layout: news-article
+short-title: Check out Smart City Day 2018
 title: Check out Smart City Day 2018
 image: /img/content/news/scd18.jpg
 product: news
 product-name: News
 class: news
 category: media
-top-story: false
-in-focus: false
+top-story: true
+in-focus: true
 ---
 
 **Discover the Latest Developments in Smart Cities**
