--- a/_news/2018-09-03-smart-city-day-2018.md
+++ b/_news/2018-09-03-smart-city-day-2018.md
@@ -7,8 +7,8 @@ product: news
 product-name: News
 class: news
 category: media
-top-story: true
-in-focus: true
+top-story: false
+in-focus: false
 ---
 
 **Discover the Latest Developments in Smart Cities**
