--- a/_blog/2017-10-09-blog mf2c.md
+++ b/_blog/2017-10-09-blog mf2c.md
@@ -1,7 +1,7 @@
 ---
 title: Improving Emergency Situation Management in Smart Cities
 image: https://media.sixsq.com/hs-fs/hubfs/Logos_non-SixSq/logo_mf2c.png?width=312&name=logo_mf2c.png
-link: http://media.sixsq.com/blog/improving-emergency-situation-management-smart-cities
+link: https://media.sixsq.com/blog/improving-emergency-situation-management-smart-cities
 top-story: true
 ---
 
