--- a/_news/2018-09-03-smart-city-day-2018.md
+++ b/_news/2018-09-03-smart-city-day-2018.md
@@ -41,4 +41,4 @@ Go to the [Eventbrite page](https://www.eventbrite.fr/e/billets-smart-city-day-5
 
 Take a look at the [CityZen](http://www.cityzen.ch/cityzen_en.html) website. CityZen acts as a designer and creator of Smart Cities for municipalities and companies and can accompany you in your smart city project. 
 
-Do a bit of background reading. Take a look at our [blog](http://media.sixsq.com/blog/what-is-a-smart-city).
+Do a bit of background reading. Take a look at our [blog](https://media.sixsq.com/blog/what-is-a-smart-city).
