Update press release

--- a/_news/2019-06-27-news-nuvla2.md
+++ b/_news/2019-06-27-news-nuvla2.md
@@ -45,11 +45,11 @@ It is important to note that existing users of Nuvla are required to create a ne
 
 **A Sample of the New Features**
 
-- Container native: Takes away Container complexity while delivering benefits
-- Security: Improves end-to-end security, from the edge to the cloud and back
-- AI enabler: Accelerates AI deployment in both edge and cloud, while ensuring data is curated for optimum deep learning
-- Data management: Edge-to-cloud distributed data management even works in semi-connected fashion, such that your solutions are resilient
-- Scale-out ready: you can go from pilot to scale with minimum risks
+- **Container native:** Takes away Container complexity while delivering benefits
+- **Security:** Improves end-to-end security, from the edge to the cloud and back
+- **AI enabler:** Accelerates AI deployment in both edge and cloud, while ensuring data is curated for optimum deep learning
+- **Data management:** Edge-to-cloud distributed data management even works in semi-connected fashion, such that your solutions are resilient
+- **Scale-out ready:** you can go from pilot to scale with minimum risks
 
 <p/>
 
