News item about MapX. Update latest news on hompepage

--- a/_news/2019-06-27-news-nuvla2.md
+++ b/_news/2019-06-27-news-nuvla2.md
@@ -7,8 +7,8 @@ product-name: News
 category: media
 class: news
 image: /img/content/nuvla/nuvla_logo_red_on_transparent_512px.png
-top-story: true
-in-focus: true
+top-story: false
+in-focus: false
 ---
 
 SixSq, the leading edge-to-cloud technology solution provider, today announced a major upgrade of its cloud management platform [Nuvla](https://sixsq.com/products-and-services/nuvla/overview).
