--- a/_news/2019-11-07-news-UNEP-june-2019.md
+++ b/_news/2019-11-07-news-UNEP-june-2019.md
@@ -13,12 +13,12 @@ in-focus: true
 
 **Geneva, Switzerland 7 November 2019**
 
-[UNEP/GRID-Geneva](https://unepgrid.ch/en) and SixSq are collaborating to consolidate the backend of [MapX](https://www.mapx.org/, a UN backed open geospatial platform for managing, analysing and visualising data on natural resources. 
+[UNEP/GRID-Geneva](https://unepgrid.ch/en) and SixSq are collaborating to consolidate the backend of [MapX](https://www.mapx.org/), a UN backed open geospatial platform for managing, analysing and visualising data on natural resources. 
 
 
 **MapX – Pulling it all together**
 
-Globally, **vast amounts of data are being generated** to inform decisions about the management of natural resources and the environment. Efficient and rapid analysis and dissemination of this data is critical in the face of today’s environmental challenges. The data, however, cannot be effectively exploited due to a lack of a single platform giving access across all environmental topics and to all countries. This problem led to UN Environment and UNEP/GRID-Geneva establishing a joint initiative in 2014 known as MapX. MapX capitalises on the use of new digital technologies and cloud computing for the sustainable management of natural resources. _“MapX is the first attempt to aggregate the range of geospatial information on the environment into a single cloud platform that is backed with the UN neutrality,”_ said Pierre Lacroix, head of unit at UNEP/GRID-Geneva. _“It provides reliable information to match data producers with decision makers, while also offering smart tools and dashboards for analysis, dissemination and storytelling.”_ 
+Globally, **vast amounts of data are being generated** to inform decisions about the management of natural resources and the environment. Efficient and rapid analysis and dissemination of this data is critical in the face of today’s environmental challenges. The data, however, cannot be effectively exploited due to a lack of a single platform giving access across all environmental topics and to all countries. This problem led to UN Environment and UNEP/GRID-Geneva establishing a joint initiative in 2014 known as MapX. MapX capitalises on the use of new digital technologies and cloud computing for the **sustainable management of natural resources**. _“MapX is the first attempt to aggregate the range of geospatial information on the environment into a single cloud platform that is backed with the UN neutrality,”_ said Pierre Lacroix, head of unit at UNEP/GRID-Geneva. _“It provides reliable information to match data producers with decision makers, while also offering smart tools and dashboards for analysis, dissemination and storytelling.”_ 
 
 MapX is supporting the future data and Knowledge platform for the United Nations Environment Programme (UNEP).
 
