remove VM references

--- a/_products-and-services/nuvlabox/hardware/hpe/1-gl10.md
+++ b/_products-and-services/nuvlabox/hardware/hpe/1-gl10.md
@@ -8,6 +8,6 @@ supplier-url: https://www.hpe.com/us/en/product-catalog/servers/edgeline-systems
 supplier-img: /img/content/nuvlabox/hpe/gl10.png
 ---
 
-4 VMs, 4 cores, 4 GB RAM, 32 GB SSD
+4 cores, 4 GB RAM, 32 GB SSD
 
 Fanless device, ideal for small footprint edge applications
