--- a/_products-and-services/nuvlabox/hardware/hpe/2-gl20.md
+++ b/_products-and-services/nuvlabox/hardware/hpe/2-gl20.md
@@ -8,6 +8,6 @@ supplier-url: https://www.hpe.com/us/en/product-catalog/servers/edgeline-systems
 supplier-img: /img/content/nuvlabox/hpe/gl20.png
 ---
 
-8 VMs, 8 cores, 8 GB RAM, 64 GB SSD
+8 cores, 8 GB RAM, 64 GB SSD
 
 Fanless device, ideal for video processing and medium load edge applications
