--- a/_products-and-services/nuvlabox/hardware/hpe/3-el1000.md
+++ b/_products-and-services/nuvlabox/hardware/hpe/3-el1000.md
@@ -8,6 +8,6 @@ supplier-url: https://www.hpe.com/us/en/product-catalog/servers/edgeline-systems
 supplier-img: /img/content/nuvlabox/hpe/el1000.png
 ---
 
-16 VMs, 16 cores, 16 GB RAM, 256 GB SSD.
+16 cores, 16 GB RAM, 256 GB SSD.
 Ideal for serious processing at the edge with multiple applications.
 Highly configurable
