--- a/_products-and-services/nuvlabox/hardware/logic-supply/ml100.md
+++ b/_products-and-services/nuvlabox/hardware/logic-supply/ml100.md
@@ -8,5 +8,5 @@ supplier-url: https://www.logicsupply.com/ml100g-30/
 supplier-img: /img/content/nuvlabox/logic-supply/nuvlabox-mini-v2.png
 ---
 
-4 VMs, 4 cores, 8 GB RAM, 120 GB SSD
+4 cores, 8 GB RAM, 120 GB SSD
 Fanless device, ideal for small footprint edge applications
