optimisation and broken link fixes

--- a/_news/2018-09-03-smart-city-day-2018.md
+++ b/_news/2018-09-03-smart-city-day-2018.md
@@ -13,7 +13,7 @@ in-focus: false
 
 **Discover the Latest Developments in Smart Cities**
 
-The innovation consulting firm [Innobridge](http://www.innobridge.com/) launched [Smart City Day](http://www.smartcityday.ch/) in 2014 to bring together smart city related developments in the French speaking part of Switzerland. Since then the event has grown to include Smart City Hack and this year more than 350 participants are expected from commercial, public sector and academic circles. Through a lively mixture of presentations, discussions and workshops, participants will be able to see, hear and experience smart city innovations from all over Europe. In association with [CityZen](http://www.cityzen.ch/cityzen_en.html), SixSq will be contributing to the workshop on dasboards, demonstrating how to showcase the data relevant for your city. 
+The innovation consulting firm [Innobridge](http://www.innobridge.com/) launched [Smart City Day](http://www.smartcityday.ch/) in 2014 to bring together smart city related developments in the French speaking part of Switzerland. Since then the event has grown to include Smart City Hack and this year more than 350 participants are expected from commercial, public sector and academic circles. Through a lively mixture of presentations, discussions and workshops, participants will be able to see, hear and experience smart city innovations from all over Europe. In association with [CityZen](http://www.cityzen.ch/cityzen_en.html), SixSq will be contributing to the workshop on dashboards, demonstrating how to showcase the data relevant for your city. 
 
 You can find the full programme [here](http://www.smartcityday.ch/uploads/7/9/6/8/79685662/scd18_-_programme_smart_city_day_2018.pdf).
 
@@ -30,12 +30,6 @@ Route du Lac 12
 1763 Granges-Paccot
 
 Switzerland
-
-**How do I register?**
-
-Go to the [Eventbrite page](https://www.eventbrite.fr/e/billets-smart-city-day-5-2018-fribourg-villes-intelligentes-a-quel-point-46666421523) to sign up.	
-
-
 
 **Can't attend?**
 
