--- a/_news/2019-11-07-news-UNEP-2019.md
+++ b/_news/2019-11-07-news-UNEP-2019.md
@@ -7,8 +7,8 @@ product: news
 product-name: News
 class: news
 category: media
-top-story: true
-in-focus: true
+top-story: false
+in-focus: false
 ---
 
 **Geneva, Switzerland 7 November 2019**
